# KlyntarCore

./: .dockerignore  .eslintrc.json  .gitignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATE.txt  Dockerfile  LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md  USEFUL  build.bat  build.js  build.sh  build_addons.sh  build_must_have_addons.bat  build_must_have_addons.sh  commonConfig.json  eslint.config.js  features.json  globalConfig.json  klyn74r.js  klyntar.tf  package-lock.json  package.json  pnpm-lock.yaml  setup.sh
CONFIGS/: services.json  tracking.json
GENESIS/: README.md
KLY_Addons/: banner.txt  binding.gyp  bliss.go  bundle.cc  cpp_utils.cc  csidh.go  dilithium.go  fail.txt  fvss.go  kyber.go  kyber_pke.go  sha256.cc  sidh.go  sike.go  success.txt  ted25519.go
KLY_Addons/falcon512/: Cargo.toml
KLY_Addons/falcon512/src/: falcon.js  lib.rs
KLY_Blocks/: controllerblock.js  instantblock.js
KLY_Conveyors/: README.md
KLY_Custom/: README.md
KLY_Essences/: accapprove.js  advancedcache.js  conveyor.js  deleg.js  event.js  msg.js  newstx.js  offspring.js  primitivecache.js  quantumswap.js  service.js  task.js  tx.js
KLY_ExecMap/: worker_sig.js  worker_ver.js
KLY_KVM/: README.md  configs.json  configsTemplate.json  vm.js
KLY_Mutualism/: README.md
KLY_Plugins/: README.md  utils.js
KLY_Process/: life.js  verification.js
KLY_Routes/: api.js  contracts.js  control.js  integrity.js  main.js  minions.js  services.js  services_conveyors.js
KLY_Services/: README.md
KLY_Space/: utils.js
KLY_Tests/: atomicBatch.js  genSigVrf.js  (+20 more)
(+631 files in other folders)
