[package]
name = "falcon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqcrypto-falcon = "0.2.0"
pqcrypto-traits = "0.3.4"
hex = "0.4.3"
js-sys = "0.3.57"

[lib]
crate-type=["cdylib"]
name="falcon"


############################## OPTIMIZATION STUFF ##############################

# +Use RUSTFLAGS="-C target-cpu=native"

[profile.release]
lto=true
codegen-units=1
incremental=true
strip=true

[profile.release.package."*"]
#lto=true
codegen-units=1
incremental=true
strip=true

# No build scripts, proc macros, and their dependencies,so no more options need